[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BookerMarkdownTool"
authors = [
  {name = "wizardforcel", email = "wizard.z@qq.com"}
]
dynamic = ["version"]
description = "iBooker/ApacheCN 知识库抓取工具"
readme = "README.md"
license = {text = "SATA"}
requires-python = ">=3.6"
keywords = [
    "wiki",
    "知识库",
    "document",
    "文档",
    "crawler",
    "爬虫",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Localization",
    "Topic :: Utilities",
]
dependencies = [
    "requests",
    "pyquery",
    "readability-lxml",
    "pyyaml",
    "EpubCrawler",
    "imgyaso",
]

[project.urls]
Homepage = "https://github.com/DracoUnion/BookerMarkdownTool"

[project.scripts]
BookerMarkdownTool = "BookerMarkdownTool.__main__:main"
md-tool = "BookerMarkdownTool.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "BookerMarkdownTool.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["BookerMarkdownTool*"]

[tool.setuptools.package-data]
"*" = ["*"]
